Add contract request aproove/decline functionality
